<resources>
    <string name="app_name">Blog Bee</string>
    <string name="my_account">My Account</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="write_blog">Write Blog</string>
    <string name="my_posts">My Posts</string>
    <string name="favourites">Favourites</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="close">close</string>
    <string name="open">open</string>
    <string name="navigation_header">User Name</string>
    <string name="cover_image">cover image</string>
    <string name="title_activity_blogs_feed">BlogsFeedActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="e_mail">E-Mail</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="home">Home</string>
    <string name="app_title">Blog Bee</string>
    <string name="create_new_account">Create New Account</string>
    <string name="login">Login</string>
    <string name="last_updated">Last Updated</string>
    <string name="_15">15</string>
    <string name="comments">Comments</string>
    <string name="total_comments">Total Comments :</string>
    <string name="cover_image_for_the_blog">Cover Image for The Blog</string>
    <string name="add_to_favourites_button">Add to Favourites Button</string>
    <string name="description">Description</string>
    <string name="post">Post</string>
    <string name="select_a_picture_to_upload_as_cover">Select a picture to upload as Cover</string>
    <string name="_5_minutes_ago">5 minutes Ago</string>
    <string name="last_updated_full">Last Updated</string>
</resources>
