<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_black_24dp"
        android:orderInCategory="100"
        android:title="@string/home"
        app:showAsAction="never"/>

    <item
        android:id="@+id/my_account"
        android:icon="@drawable/ic_person_black_24dp"
        android:orderInCategory="100"
        android:title="@string/my_account"
        app:showAsAction="never"/>

    <item
        android:id="@+id/write_blog"
        android:icon="@drawable/ic_create_black_24dp"
        android:orderInCategory="100"
        android:title="@string/write_blog"
        app:showAsAction="never"/>

    <item
        android:id="@+id/my_posts"
        android:icon="@drawable/ic_assignment_ind_black_24dp"
        android:orderInCategory="100"
        android:title="@string/my_posts"
        app:showAsAction="never"/>

    <item
        android:id="@+id/favourites"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:orderInCategory="100"
        android:title="@string/favourites"
        app:showAsAction="never"/>

    <item
        android:id="@+id/bookmarks"
        android:icon="@drawable/ic_bookmark_black_24dp"
        android:orderInCategory="100"
        android:title="@string/bookmarks"
        app:showAsAction="never"/>

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:orderInCategory="105"
        android:title="@string/settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:orderInCategory="106"
        android:title="@string/log_out"
        app:showAsAction="never"/>

</menu>