<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.noushad.blogbee.view.MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="72dp"
        android:fontFamily="cursive"
        android:text="@string/app_title"
        android:textColor="@color/cardview_light_background"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/password_entry"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:fontFamily="cursive"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/email_entry"
        app:layout_constraintRight_toRightOf="@+id/email_entry"
        app:layout_constraintTop_toBottomOf="@+id/email_entry"
        tools:ignore="HardcodedText"/>

    <EditText
        android:id="@+id/email_entry"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:fontFamily="cursive"
        android:hint="E-mail"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="HardcodedText"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="cursive"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="?attr/colorBackgroundFloating"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/password_entry"
        app:layout_constraintRight_toRightOf="@+id/password_entry"
        app:layout_constraintTop_toBottomOf="@+id/password_entry"/>

    <TextView
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="32dp"
        android:fontFamily="cursive"
        android:text="@string/create_new_account"
        android:textColor="@color/cardview_light_background"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/login_button"
        app:layout_constraintRight_toRightOf="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@+id/login_button"/>
</android.support.constraint.ConstraintLayout>
