<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="@+id/textView2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="48dp"
        android:text="Title"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/select_a_picture_to_upload_as_cover"
        app:layout_constraintBottom_toBottomOf="@+id/imageUploadButton"
        app:layout_constraintLeft_toLeftOf="@+id/titleEditText"
        app:layout_constraintTop_toTopOf="@+id/imageUploadButton"
        app:layout_constraintVertical_bias="0.636"
        />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/imageUploadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/circle_background"
        app:backgroundTint="@color/colorPrimaryDark"
        app:fabSize="normal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/textView3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleEditText"
        app:srcCompat="@drawable/ic_photo_camera_white_24dp"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/description"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/textView3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageUploadButton"/>

    <EditText
        android:id="@+id/blog_description_edit"
        android:layout_width="329dp"
        android:layout_height="149dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:gravity="start"
        android:hint="Write Here ..."
        android:inputType="text|textMultiLine|textLongMessage"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintLeft_toLeftOf="@+id/textView4"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="HardcodedText"/>

    <Button
        android:id="@+id/postButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="cursive"
        android:text="@string/post"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/blog_description_edit"
        app:layout_constraintRight_toRightOf="@+id/blog_description_edit"
        app:layout_constraintTop_toBottomOf="@+id/blog_description_edit"/>
</android.support.constraint.ConstraintLayout>